--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,23 @@ button:focus {
   color: #4d5ae5;
 }
 
+.container {
+  max-width: 1158px;
+  padding-left: ;
+  padding-right: ;
+  margin-left: ;
+  margin-right: ;
+  background-color: #fff;
+}
+
+section {
+  padding: 120px 0;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  margin: 0 auto;
+}
+
 /* HEADER - Шапка сайта - Начало */
 
 .main_logo {
