--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,7 @@ img {
 .section_second_list {
   display: flex;
   gap: 24px;
+  padding: 0 156px;
 }
 
 .section_second_li {
@@ -285,6 +286,7 @@ img {
 
 .footer {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 
 .footer_logo {
@@ -295,6 +297,8 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  display: inline-block; 
+  margin-bottom: 16px;
 }
 
 .footer_logo_span {
@@ -305,6 +309,7 @@ img {
   line-height: 1.5;
   color: #f4f4fd;
   letter-spacing: 0.02em;
+  max-width: 264px;
 }
 
 /*FOOTER - Подвал сайта - END */
