--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,7 @@ flex-basis: calc(((100% - 72px) / 4));
   background-color: #ffffff;
    display: flex;
    gap: 24px;
+   width: calc((100% - 72px)/4);
 }
 
 .section_third_main_title {
@@ -240,8 +241,10 @@ flex-basis: calc(((100% - 72px) / 4));
 }
 
 .section_third_li {
-width: calc((100% - 72px) / 4);
+/*width: calc((100% - 72px)/4);*/
 border-radius: 0px 0px 4px 4px; 
+background-color: aquamarine;
+
 }
 
 .staff {
