--- a/css/style.css
+++ b/css/style.css
@@ -225,8 +225,7 @@ flex-basis: calc(((100% - 72px) / 4));
 .section_third_list {
   background-color: #ffffff;
    display: flex;
-   gap: 24px;
-   width: calc((100% - 72px)/4);
+   gap: 24px;   
 }
 
 .section_third_main_title {
@@ -241,7 +240,7 @@ flex-basis: calc(((100% - 72px) / 4));
 }
 
 .section_third_li {
-/*width: calc((100% - 72px)/4);*/
+width: calc((100% - 72px)/4);
 border-radius: 0px 0px 4px 4px; 
 background-color: aquamarine;
 
@@ -273,6 +272,10 @@ background-color: aquamarine;
 
 /*FOURTH SECTION - START */
 
+.section_fourth {
+  padding: 120px 0 120px 0;
+}
+
 .section_fourth_main_title {
   font-weight: 700;
   font-size: 36px;
@@ -281,6 +284,24 @@ background-color: aquamarine;
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
+}
+
+.section_fourth_list {
+display: flex;
+flex-wrap: wrap;
+column-gap: 24px; 
+row-gap: 48px;
+}
+
+.section_fourth_li {
+width: calc((100% - 48px) / 3);
+}
+
+.name_app {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
 .section_fourth_title {
@@ -289,6 +310,7 @@ background-color: aquamarine;
   line-height: 120%;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .section_fourth_descr {
