--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,19 @@ img {
   visibility: hidden;
 }
 
+.visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .section_second_title {
   font-weight: 500;
   font-size: 20px;
