fix menu address and add padding 0 v kartochkah

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ img {
 
 .elementy_header {
   display: flex;
+  justify-content: space-between;
 }
 
 .nav_header {
@@ -111,9 +112,14 @@ img {
 
 .address {
   font-style: normal;
-  margin-right: 0;
-
   background-color: aqua;
+  display: flex;
+}
+
+.address-list {
+  padding: 0;
+  display: flex;
+  gap: 40px;
 }
 
 .address_link {
@@ -131,7 +137,7 @@ img {
   color: #404bbf;
 }
 
-/* HEADER - Шапка сайта - Конец */
+/* ------------------------------------------- */
 
 /*FIRST SECTION  - Начало*/
 
@@ -180,7 +186,7 @@ img {
   padding: 120px 0;
 }
 
-.visually-hidden{
+.visually-hidden {
   visibility: hidden;
 }
 
@@ -220,14 +226,14 @@ img {
 }
 
 .section_second_li {
-flex-basis: calc(((100% - 72px) / 4));
+  flex-basis: calc(((100% - 72px) / 4));
 }
 
 .section_second_title {
   margin-bottom: 8px;
 }
 
-/*SECOND SECTION - END */
+/* --------------------- */
 
 /*THIRD SECTION - START */
 
@@ -237,8 +243,9 @@ flex-basis: calc(((100% - 72px) / 4));
 
 .section_third_list {
   background-color: #ffffff;
-   display: flex;
-   gap: 24px;   
+  display: flex;
+  gap: 24px;
+  padding: 0;
 }
 
 .section_third_main_title {
@@ -253,10 +260,9 @@ flex-basis: calc(((100% - 72px) / 4));
 }
 
 .section_third_li {
-width: calc((100% - 72px)/4);
-border-radius: 0px 0px 4px 4px; 
-background-color: aquamarine;
-
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+  background-color: aquamarine;
 }
 
 .staff {
@@ -281,7 +287,7 @@ background-color: aquamarine;
   color: #434455;
 }
 
-/*THIRD SECTION - END */
+/* ------------------------ */
 
 /*FOURTH SECTION - START */
 
@@ -301,14 +307,15 @@ background-color: aquamarine;
 }
 
 .section_fourth_list {
-display: flex;
-flex-wrap: wrap;
-column-gap: 24px; 
-row-gap: 48px;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+  padding: 0;
 }
 
 .section_fourth_li {
-width: calc((100% - 48px) / 3);
+  width: calc((100% - 48px) / 3);
 }
 
 .name_app {
@@ -351,7 +358,7 @@ width: calc((100% - 48px) / 3);
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  display: inline-block; 
+  display: inline-block;
   margin-bottom: 16px;
 }
 
