fix width li_v2

--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ img {
 }
 
 .section_second_li {
-  flex-basis: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 .section_second_title {
