--- a/css/style.css
+++ b/css/style.css
@@ -183,8 +183,15 @@ img {
   padding: 120px 0;
 }
 
-/* .visually-hidden {
-  visibility: hidden;
+/*.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 } */
 
 .visually-hidden {
@@ -194,6 +201,8 @@ img {
   margin: -1px;
   border: 0;
   padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
