--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ a {
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 button {
@@ -33,7 +35,6 @@ button:focus {
   max-width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-  background-color: red;
 }
 
 section {
@@ -47,7 +48,8 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
 }
 
 img {
@@ -63,6 +65,7 @@ img {
 .elementy_header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .nav_header {
@@ -97,6 +100,7 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding: 24px 0;
+  display: block;
 }
 
 .nav_menu_link:hover {
@@ -109,7 +113,7 @@ img {
 
 .address {
   font-style: normal;
-  background-color: aqua;
+
   display: flex;
 }
 
@@ -151,6 +155,7 @@ img {
   text-align: center;
   color: #fff;
   max-width: 496px;
+  margin: 0 auto;
 }
 .section_top_button {
   background-color: #4d5ae5;
@@ -182,17 +187,6 @@ img {
 .section_second {
   padding: 120px 0;
 }
-
-/*.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-} */
 
 .visually-hidden {
   position: absolute;
@@ -247,7 +241,6 @@ img {
 }
 
 .section_third_list {
-  background-color: #ffffff;
   display: flex;
   gap: 24px;
   padding-left: 0px;
@@ -268,7 +261,6 @@ img {
 .section_third_li {
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
-  background-color: aquamarine;
 }
 
 .staff {
